@@ -1,3 +1,10 @@
+2004-12-14 Bart Hakvoort  <gparted@users.sf.net>
+
+	* added support for jfs (create, copy, grow) and hfs (create, copy)
+	* fixed a bug in copying xfs filesystems.
+	* fixed a number of small bugs/annoying issues.
+	* I guess this also means gparted now supports more filesystems then any other (OSS) partitionmanager.. (lekker belangrijk ;) )
+
 2004-12-13 Bart Hakvoort  <gparted@users.sf.net>
 
 	* Added support for xfs. this means creating and growing xfs filesystems. Shrinking requires some hacking with dump_xfs etc..
